--- a/aulas/aula27/siteStelar/static/css/index.css
+++ b/aulas/aula27/siteStelar/static/css/index.css
@@ -1,21 +1,30 @@
 body {
     background-image: url(images/overlay.png),
      linear-gradient( 45deg, #e37682 15%, #5f4d93 85%);
-     text-align: center;
      font-family: arial;
     }
 
-.wrapper {
-        position: fixed;
-        background: #dee0e3;
-        top: 30%;
-        left: 15%;
-        width: 70%;
-        height: 100%;
-        opacity: 1.0;
-        border-radius: 10px;
-  
+.head {
+    padding: 7em 5em 4em 5em;
+    text-align: center;
+    color: #dee0e3;
 }
+
+.acolor {
+   color: #dee0e3;
+   border-bottom: dotted 1px;
+   text-decoration: none;
+}
+
+.wrapper {
+        margin: auto;
+        background: #dee0e3;
+        width: 80%;
+        border-radius: 10px;
+        max-width: calc(100% - 4em);
+        
+}
+  
 
 .bela {
     color: white;
@@ -23,5 +32,25 @@ body {
 
 h1 {
    color: white;
+}
+
+nav {
+   
+    background-color: #ffffff;
+    color: #636363;
+    position: absolute;
+    width: 64em;
+    max-width: calc(100% - 4em);
+    padding: 1em;
+    background-color: #f7f7f7;
+    border-top-left-radius: 0.25em;
+    border-top-right-radius: 0.25em;
+    cursor: default;
+    text-align: center;
+
+}
+.botao {
+   
+
 }
 
