--- a/aulas/aula27/siteStelar/static/css/index.css
+++ b/aulas/aula27/siteStelar/static/css/index.css
@@ -1,6 +1,6 @@
 body {
     background-image: url(images/overlay.png),
-     linear-gradient( 45deg, #e37682 15%, #5f4d93 85%);
+     linear-gradient( 45deg, #af2938 15%, #5f4d93 85%);
      font-family: arial;
     }
 
